De-troff haltcl.asciidoc and correct /man/man1 filenames in header mansource:
Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/man/man1/axis-remote.asciidoc
+++ b/docs/man/man1/axis-remote.asciidoc
@@ -4,7 +4,7 @@
 
 = axis-remote
 :manmanual: HAL Components
-:mansource: ../man/man1/axis-remote.1.asciidoc
+:mansource: ../man/man1/axis-remote.asciidoc
 :man version : 
 
 
