--- a/docs/man/man1/comp.asciidoc
+++ b/docs/man/man1/comp.asciidoc
@@ -4,7 +4,7 @@
 
 = comp
 :manmanual: HAL Components
-:mansource: ../man/man1/comp.1.asciidoc
+:mansource: ../man/man1/comp.asciidoc
 :man version : 
 
 
