--- a/docs/man/man1/linuxcnc.asciidoc
+++ b/docs/man/man1/linuxcnc.asciidoc
@@ -4,7 +4,7 @@
 
 = LinuxCNC
 :manmanual: HAL Components
-:mansource: ../man/man1/linuxcnc.1.asciidoc
+:mansource: ../man/man1/linuxcnc.asciidoc
 :man version : 
 
 
