--- a/docs/man/man1/shuttlexpress.asciidoc
+++ b/docs/man/man1/shuttlexpress.asciidoc
@@ -4,7 +4,7 @@
 
 = SHUTTLEXPRESS
 :manmanual: HAL Components
-:mansource: ../man/man1/shuttlexpress.1.asciidoc
+:mansource: ../man/man1/shuttlexpress.asciidoc
 :man version : 
 
 
