--- a/docs/man/man1/axis.asciidoc
+++ b/docs/man/man1/axis.asciidoc
@@ -4,7 +4,7 @@
 
 = AXIS
 :manmanual: HAL Components
-:mansource: ../man/man1/axis.1.asciidoc
+:mansource: ../man/man1/axis.asciidoc
 :man version : 
 
 
