--- a/docs/man/man1/gladevcp.asciidoc
+++ b/docs/man/man1/gladevcp.asciidoc
@@ -4,7 +4,7 @@
 
 = GLADEVCP
 :manmanual: HAL Components
-:mansource: ../man/man1/gladevcp.1.asciidoc
+:mansource: ../man/man1/gladevcp.asciidoc
 :man version : 
 
 
