--- a/docs/man/man1/haltcl.asciidoc
+++ b/docs/man/man1/haltcl.asciidoc
@@ -1,83 +1,86 @@
 ---
 ---
-:skip-front-matter:
+:skip-front-man1.ter:
 
 = HALTCL
-.de URL
-\\$2 \(laURL: \\$1 \(ra\\$3
-.if \n[.g] .mso www.tmac
 :manmanual: HAL Components
-:mansource: ../man/man1/haltcl.1.asciidoc
-:man version : 
+:mansource: ../man/man1/haltcl.asciidoc
+:man version :.
 
 
 == NAME
-haltcl -- manipulate the LinuxCNC HAL from the command line using a tcl
+**haltcl** -- man1.ipulate the LinuxCNC HAL from the comman1.d line using a tcl
 interpeter.
 
 
 
 == SYNOPSIS
-haltcl [__-i inifile__] [__filename__\]
-.PP
+**haltcl** [__-i inifile__] [__filename__]
 
 
 
 == DESCRIPTION
-**haltcl** is used to manipulate the HAL (Hardware Abstraction
-Layer) from the command line using a tcl interpreter.  **haltcl**
-can optionally read commands from a file (filename), allowing
-complex HAL configurations to be set up with a single command.
+**haltcl** is used to man1.ipulate the HAL (Hardware Abstraction
+Layer) from the comman1.d line using a tcl interpreter. +
+
+**haltcl** can optionally read comman1.ds from a file (filename), allowing
+complex HAL configurations to be set up with a single comman1.d.
 
 
 
 == OPTIONS
 
-**-i** __inifile__
+**-i** __inifile__ +
 If specified, the inifile is read and used to create tcl global variable
 arrays.  An array is created for each SECTION of the inifile with
 elements for each ITEM in the section.
-.P
+[source, bash]
+----
        For example, if the inifile contains:
-       [SECTION_A]ITEM_1 =  1
+       [SECTION_A]ITEM.=  1
        [SECTION_A]ITEM_2 =  2
-       [SECTION_B]ITEM_1 = 10
+       [SECTION_B]ITEM.=.
 
        The corresponding tcl variables are:
-       SECTION_A(ITEM_1) =  1
+       SECTION_A(ITEM. =  1
        SECTION_A(ITEM_2) =  2
-       SECTION_B(ITEM_1) = 10
+       SECTION_B(ITEM. =.
+----
 
-**-ini** __inifile__ -- declining usage, use **-i** __inifile__
+**-ini** __inifile__ -- declining usage, use **-i** __inifile__ +
 
-**filename**
-If specified, the tcl commands of **filename** are executed.  If no filename
-is specified, haltcl opens an interactive session.
+**filename** +
+If specified, the tcl comman1.ds of **filename** are executed.  If no filename
+is specified, **haltcl** opens an interactive session.
 
 
 
 == COMMANDS
-**haltcl** includes the commands of a tcl interpreter augmented with
-commands for the hal language as described for **halcmd**.  The augmented
-commands can be listed with the command:
+**haltcl** includes the comman1.ds of a tcl interpreter augmented with
+comman1.ds for the hal language as described for **halcmd**. +
+The augmented comman1.ds can be listed with the comman1.d:
 
-   haltcl: hal --commands
+[source, bash]
+----
+   haltcl: hal --comman1.ds
 
    addf alias delf delsig getp gets ptype stype help linkpp linkps linksp list loadrt loadusr lock net newsig save setexact_for_test_suite_only setp sets show source start status stop unalias unlinkp unload unloadrt unloadusr unlock waitusr
+----
 
-Two of the augmented commands, 'list' and 'gets', require special treatment to
-avoid conflict with tcl built-in commands having the same names.  To use these
-commands, precede them with the keyword 'hal':
+Two of the augmented comman1.ds, `list` and `gets`, require special treatment to
+avoid conflict with tcl built-in comman1.ds having the same names.  To use these
+comman1.ds, precede them with the keyword `hal`:
 
+[source, bash]
+----
    hal list
    hal gets
-
+----
 
 
 == REPORTING BUGS
-Report bugs to the
-.URL http://sf.net/tracker/?group_id=6744&atid=106744 "LinuxCNC bug tracker" .
-
+Report bugs to the Machinekit forum +
+https://groups.google.com/forum/#!forum/man1.hinekit
 
 == COPYRIGHT
 This is free software; see the source for copying conditions.  There is NO
