--- a/docs/man/man1/halui.asciidoc
+++ b/docs/man/man1/halui.asciidoc
@@ -4,7 +4,7 @@
 
 = HALUI
 :manmanual: HAL Components
-:mansource: ../man/man1/halui.1.asciidoc
+:mansource: ../man/man1/halui.asciidoc
 :man version : 
 
 
