--- a/docs/man/man1/iocontrol.asciidoc
+++ b/docs/man/man1/iocontrol.asciidoc
@@ -4,7 +4,7 @@
 
 = IOCONTROL
 :manmanual: HAL Components
-:mansource: ../man/man1/iocontrol.1.asciidoc
+:mansource: ../man/man1/iocontrol.asciidoc
 :man version : 
 
 
