--- a/docs/man/man1/linuxcncrsh.asciidoc
+++ b/docs/man/man1/linuxcncrsh.asciidoc
@@ -4,7 +4,7 @@
 
 = linuxcncrsh
 :manmanual: HAL Components
-:mansource: ../man/man1/linuxcncrsh.1.asciidoc
+:mansource: ../man/man1/linuxcncrsh.asciidoc
 :man version : 
 
 
