--- a/docs/man/man1/vfs11_vfd.asciidoc
+++ b/docs/man/man1/vfs11_vfd.asciidoc
@@ -4,7 +4,7 @@
 
 = vfs11_vfd
 :manmanual: HAL Components
-:mansource: ../man/man1/vfs11_vfd.1.asciidoc
+:mansource: ../man/man1/vfs11_vfd.asciidoc
 :man version : 
 
 
