Correct /man/man9 filenames in header mansource: & remove (9) refs.
Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/man/man9/classicladder.asciidoc
+++ b/docs/man/man9/classicladder.asciidoc
@@ -2,9 +2,9 @@
 ---
 :skip-front-matter:
 
-= CLASSICLADDER(9)
+= CLASSICLADDER
 :manmanual: HAL Components
-:mansource: ../man/man9/classicladder.9.asciidoc
+:mansource: ../man/man9/classicladder.asciidoc
 :man version : 
 
 == NAME
