--- a/docs/man/man9/mux_generic.asciidoc
+++ b/docs/man/man9/mux_generic.asciidoc
@@ -2,11 +2,9 @@
 ---
 :skip-front-matter:
 
-= MUX_GENERIC(9)
-\# Author Andy Pugh
-\# Issued under the terms of the GPL v2 License or any later version
+= MUX_GENERIC
 :manmanual: HAL Components
-:mansource: ../man/man9/mux_generic.9.asciidoc
+:mansource: ../man/man9/mux_generic.asciidoc
 :man version : 
 
 
