--- a/docs/man/man1/haltcl.asciidoc
+++ b/docs/man/man1/haltcl.asciidoc
@@ -1,15 +1,15 @@
 ---
 ---
-:skip-front-man1.ter:
+:skip-front-matter:
 
 = HALTCL
 :manmanual: HAL Components
 :mansource: ../man/man1/haltcl.asciidoc
-:man version :.
+:man version:
 
 
 == NAME
-**haltcl** -- man1.ipulate the LinuxCNC HAL from the comman1.d line using a tcl
+**haltcl** -- manipulate the LinuxCNC HAL from the command line using a tcl
 interpeter.
 
 
@@ -20,11 +20,11 @@ interpeter.
 
 
 == DESCRIPTION
-**haltcl** is used to man1.ipulate the HAL (Hardware Abstraction
-Layer) from the comman1.d line using a tcl interpreter. +
+**haltcl** is used to manipulate the HAL (Hardware Abstraction
+Layer) from the command line using a tcl interpreter. +
 
-**haltcl** can optionally read comman1.ds from a file (filename), allowing
-complex HAL configurations to be set up with a single comman1.d.
+**haltcl** can optionally read commands from a file (filename), allowing
+complex HAL configurations to be set up with a single command.
 
 
 
@@ -36,40 +36,40 @@ arrays.  An array is created for each SECTION of the inifile with
 elements for each ITEM in the section.
 [source, bash]
 ----
-       For example, if the inifile contains:
-       [SECTION_A]ITEM.=  1
-       [SECTION_A]ITEM_2 =  2
-       [SECTION_B]ITEM.=.
+For example, if the inifile contains:
+[SECTION_A]ITEM_1 =  1
+[SECTION_A]ITEM_2 =  2
+[SECTION_B]ITEM_1 =  1
 
-       The corresponding tcl variables are:
-       SECTION_A(ITEM. =  1
-       SECTION_A(ITEM_2) =  2
-       SECTION_B(ITEM. =.
+The corresponding tcl variables are:
+SECTION_A(ITEM_1) =  1
+SECTION_A(ITEM_2) =  2
+SECTION_B(ITEM_1) =  1
 ----
 
 **-ini** __inifile__ -- declining usage, use **-i** __inifile__ +
 
 **filename** +
-If specified, the tcl comman1.ds of **filename** are executed.  If no filename
+If specified, the tcl commands of **filename** are executed.  If no filename
 is specified, **haltcl** opens an interactive session.
 
 
 
 == COMMANDS
-**haltcl** includes the comman1.ds of a tcl interpreter augmented with
-comman1.ds for the hal language as described for **halcmd**. +
-The augmented comman1.ds can be listed with the comman1.d:
+**haltcl** includes the commands of a tcl interpreter augmented with
+commands for the hal language as described for **halcmd**. +
+The augmented commands can be listed with the command:
 
 [source, bash]
 ----
-   haltcl: hal --comman1.ds
+haltcl: hal --commands
 
-   addf alias delf delsig getp gets ptype stype help linkpp linkps linksp list loadrt loadusr lock net newsig save setexact_for_test_suite_only setp sets show source start status stop unalias unlinkp unload unloadrt unloadusr unlock waitusr
+addf alias delf delsig getp gets ptype stype help linkpp linkps linksp list loadrt loadusr lock net newsig save setexact_for_test_suite_only setp sets show source start status stop unalias unlinkp unload unloadrt unloadusr unlock waitusr
 ----
 
-Two of the augmented comman1.ds, `list` and `gets`, require special treatment to
-avoid conflict with tcl built-in comman1.ds having the same names.  To use these
-comman1.ds, precede them with the keyword `hal`:
+Two of the augmented commands, `list` and `gets`, require special treatment to
+avoid conflict with tcl built-in commands having the same names.  To use these
+commands, precede them with the keyword `hal`:
 
 [source, bash]
 ----
@@ -80,7 +80,7 @@ comman1.ds, precede them with the keyword `hal`:
 
 == REPORTING BUGS
 Report bugs to the Machinekit forum +
-https://groups.google.com/forum/#!forum/man1.hinekit
+https://groups.google.com/forum/#!forum/machinekit
 
 == COPYRIGHT
 This is free software; see the source for copying conditions.  There is NO
